@@ -1,3 +1,5 @@
+- use systemd-detect-virt for detecting virtualization technology
+
 Version 17.23 - 22 March 2016
 
 - do not include twice webkit2gtk library
